2015-04-06  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Output testsuite/Makefile and
	testsuite/cockroach.base/Makefile.
	* testsuite/lib/cockroach.exp: New file.
	* testsuite/cockroach.base/version.exp: Likewise.
	* testsuite/Makefile.am: Likewise.
	* testsuite/cockroach.base/Makefile.am: Likewise.

2015-04-06  Giuseppe Scrivano  <gscrivan@redhat.com>

	* src/arch/syscall_names.h [ROACH_ARCH_X86_32]: Include
	"x86_32_syscalls.h".
	[ROACH_ARCH_X86_64]: Include "x86_64_syscalls.h".
	* src/arch/x86_32_syscalls.h: New file.
	* src/arch/x86_64_syscalls.h: New file.

2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/arch/linux_sparc64.c (get_sparc_reg): New function.
	(set_sparc_reg): Likewise.
	(roach_get_sc): Implemented.
	(roach_get_sc_ret): Likewise.
	(roach_get_sc_arg): Likewise.
	(roach_set_sc): Likewise.
	(roach_set_sc_ret): Likewise.
	(roach_set_sc_arg): Likewise.
	Include ucontext.h.

2015-04-04  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* src/arch/linux_sparc64.c: New file.
	* configure.ac (ROACH_ARCH): AC_Defined.
	* src/arch/syscall_names.h: New file.
	* src/syscall_names.c: Include syscall_names instead of
	<asm/unistd.h>.
	* src/arch/sparc_syscall_names.h: New file.
	* configure.ac: New supported architecture sparc64.

2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins/Makefile.am (pkginclude_HEADERS): Install plugin.h
	under pkgincludedir instead of includedir.

2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Missing copyright notices added.

2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins/inhibit/inhibit.c (plugin_add): Do not exit the
	process in library code.  Return a failure code instead.
	* src/plugins/fail_mem/fail_mem.c (plugin_add): Likewise.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins/inhibit/inhibit.c (inhibit_hook): New function.

	* src/syscall_specs.c (roach_parse_scspec): Get a new argument
	endp, that stores the next character to the matched string.
