@@ -17,6 +17,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # Subdirectories to descend into.
-SUBDIRS = doc lib po src tests testsuite
+SUBDIRS = doc lib po src testsuite
 
 ACLOCAL_AMFLAGS = -I m4
